# Eos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
eos/: CMakeLists.txt
eos/Eos/: Eos.hpp  EosPCH.hpp  stbInclude.cpp
eos/Eos/Core/: Application.cpp  Application.hpp  Core.hpp  DeletionQueue.cpp  DeletionQueue.hpp  EntryPoint.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
eos/Eos/Core/Cameras/: Base.cpp  Base.hpp  Orthographic.cpp  Orthographic.hpp  Perspective.cpp  Perspective.hpp
eos/Eos/Engine/: Buffer.cpp  Buffer.hpp  ComputeShader.cpp  ComputeShader.hpp  Engine.cpp  Engine.hpp  GlobalData.cpp  GlobalData.hpp  ImmediateSubmit.cpp  ImmediateSubmit.hpp  Initializers.cpp  Initializers.hpp  Mesh.hpp  Mesh.inl  PipelineBuilder.cpp  PipelineBuilder.hpp  RenderPassBuilder.cpp  RenderPassBuilder.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Types.hpp
eos/Eos/Engine/DescriptorSets/: DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorBuilder.hpp  DescriptorLayoutCache.cpp  DescriptorLayoutCache.hpp
eos/Eos/Engine/Pipelines/: ComputePipelineBuilder.cpp  ComputePipelineBuilder.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineCreationInfo.cpp  PipelineCreationInfo.hpp
eos/Eos/Engine/Submits/: GraphicsSubmit.cpp  GraphicsSubmit.hpp  TransferSubmit.cpp  TransferSubmit.hpp
eos/Eos/Events/: EventCodes.hpp  EventDispatcher.hpp  EventListener.cpp  EventListener.hpp  Events.hpp
eos/Eos/Util/: DeletionQueue.hpp  PipelineCreation.hpp
eos/Eos/Util/Cameras/: BaseCamera.cpp  BaseCamera.hpp  Orthographic.cpp  Orthographic.hpp
examples/: 3DCube.cpp  BasicDescriptorSets.cpp  BasicTriangle.cpp  CMakeLists.txt  ColourChangingTriangle.cpp  Compute.cpp  ComputeTexture.cpp  Events.cpp  IndexedTriangle.cpp  MovingSquare.cpp  README.md  Snake.cpp  Textures.cpp
examples/3DCube/: 3DCube.cpp
examples/3DCube/res/Shaders/: 3DCube.frag
examples/BasicDescriptorSets/: BasicDescriptorSets.cpp
examples/BasicDescriptorSets/res/Shaders/: BasicDescriptorSets.frag
examples/BasicTriangle/: BasicTriangle.cpp
examples/Compute/: Compute.cpp
examples/ComputeTexture/: ComputeTexture.cpp
examples/ComputeTexture/res/Shaders/: Main.comp  Main.vert
examples/Events/: Events.cpp
examples/Events/res/Shaders/: Events.vert
examples/ImguiTest/: Imgui.cpp
examples/ImguiTest/res/Shaders/: Imgui.frag
examples/IndexedTriangle/: IndexedTriangle.cpp
examples/MovingSquare/: MovingSquare.cpp
examples/Snake/: Snake.cpp
examples/Snake/res/Shaders/: Apple.frag
examples/Textures/: Textures.cpp
examples/res/3DCube/Shaders/: 3DCube.vert
examples/res/ColourChangingTriangle/Shaders/: ColourChangingTriangle.vert
examples/res/Compute/Shaders/: Square.comp
examples/res/ComputeTexture/Shaders/: Main.comp
examples/res/Events/Shaders/: Events.frag
examples/res/IndexedTriangle/Shaders/: IndexedTriangle.vert
examples/res/MovingSquare/Shaders/: MovingSquare.vert
examples/res/Snake/Shaders/: Apple.frag  Snake.frag  Snake.vert
examples/res/Textures/Shaders/: Texture.frag
src/: Eos.hpp
src/Eos/: Application.cpp  Application.hpp  Core.hpp  Engine.cpp  Engine.hpp  EntryPoint.hpp  Eos.hpp  EosPCH.hpp
src/Eos/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Window.cpp
src/Eos/Core/Events/: EventDispatcher.cpp  EventDispatcher.hpp  EventListener.cpp  EventListener.hpp  Events.hpp
src/Eos/Engine/: Engine.cpp  Engine.hpp  Mesh.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  Shader.cpp  Shader.hpp
src/Eos/Engine/DescriptorSets/: DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorBuilder.cpp  DescriptorBuilder.hpp  DescriptorLayoutCache.hpp
src/Eos/Events/: EventDispatcher.cpp  EventDispatcher.hpp  EventListener.cpp  EventListener.hpp  Events.hpp
src/Eos/Util/: DeletionQueue.hpp  Initializers.cpp  Initializers.hpp  PipelineCreation.cpp  Timer.cpp  Timer.hpp  Types.hpp
